--- a/style.css
+++ b/style.css
@@ -531,6 +531,36 @@ button:hover {
     color:  #2857a4;
 }
 
+.project-heading {
+    margin-top: 7vh;
+    color: #2857a4;
+    font-size: 40px;
+    font-weight: 100;
+    display: flex;
+    justify-content: center;
+}
+
+.projects {
+    display: flex;
+    gap: 3em;
+    justify-content: space-between;
+}
+
+.project-card {
+    background-color: white;
+    text-align: center;
+    border-radius: 20px;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
+    padding: 1em;
+    width: 8em;
+    height: 8em;
+    cursor: pointer;
+    transition: 0.2s ease-in-out;
+}
+
+.project-card:hover {
+    transform: scale(110%, 110%);
+}
 
 .address-icons {
     text-align: left;
